Fix repo list display on Safari

--- a/public/less/_dashboard.less
+++ b/public/less/_dashboard.less
@@ -52,6 +52,10 @@
 
 &.feeds {
 	.news {
+		> .ui.grid {
+			margin-left: auto;
+			margin-right: auto;
+		}
 		.ui.avatar {
 			margin-top: 13px;
 		}
